--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,7 +12,7 @@
 
     <modules>
         <module>config-server</module>
-        <module>discovery-server</module>
+        <!-- <module>discovery-server</module>
         <module>api-gateway</module>
         <module>auth-service</module>
         <module>consumer-service</module>
@@ -20,7 +20,7 @@
         <module>meter-service</module>
         <module>billing-service</module>
         <module>notification-service</module>
-        <module>report-service</module>
+        <module>report-service</module> -->
     </modules>
 
     <properties>
@@ -50,14 +50,24 @@
     </dependencyManagement>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+    <pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </pluginManagement>
+</build>
 
 </project>
