--- a/backend/auth-service/pom.xml
+++ b/backend/auth-service/pom.xml
@@ -75,6 +75,10 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-devtools</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
