--- a/backend/auth-service/src/main/resources/application.properties
+++ b/backend/auth-service/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.config.import=optional:configserver:http://localhost:8888
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 management.endpoints.web.exposure.include=*
+
+spring.security.debug=true
