--- a/backend/auth-service/src/main/resources/application.properties
+++ b/backend/auth-service/src/main/resources/application.properties
@@ -8,3 +8,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=*
 
 spring.security.debug=true
+
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
