--- a/backend/config-server/pom.xml
+++ b/backend/config-server/pom.xml
@@ -12,6 +12,7 @@
     </parent>
 
     <artifactId>config-server</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
