--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,12 +15,12 @@
         <module>discovery-server</module>
         <module>api-gateway</module>
         <module>auth-service</module>
-        <!-- <module>consumer-service</module>
+        <module>consumer-service</module>
         <module>utility-service</module>
         <module>meter-service</module>
         <module>billing-service</module>
         <module>notification-service</module>
-        <module>report-service</module> -->
+        <module>report-service</module>
     </modules>
 
     <properties>
