--- a/backend/auth-service/pom.xml
+++ b/backend/auth-service/pom.xml
@@ -95,6 +95,13 @@
     <version>0.11.5</version>
     <scope>runtime</scope>
 </dependency>
+
+ <!-- Testing -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
     <build>
