--- a/backend/notification-service/src/main/resources/application.properties
+++ b/backend/notification-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=notification-service
+server.port=8086
+
+spring.config.import=optional:configserver:http://localhost:8888
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+management.endpoints.web.exposure.include=*
