--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -20,6 +20,7 @@
         <module>meter-service</module>
         <module>billing-service</module>
         <module>notification-service</module>
+        <module>payment-service</module>
         <module>report-service</module>
     </modules>
 
